MonetDB5/src/mal/Tests/tst150.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
#command Admin.lookup(nme:str):bat[str,str] = CMDlookup; 
!ERROR: address of 'CMDlookup' not found
command Admin.lookup(nme:str):bat[str,str] = CMDlookup;	# 0  (lookup:bat[str,str])<-(nme:str)
#function sample(nme:str, val:any):bit;
#   b := lookup(nme); #find a bat
#   h := select(b,val,val);
#   t := count(h);
#   x := print(t);
#   y := print(val);
#end sample;
function Admin.sample(nme:str,val:any):bit;	# 0  (sample:bit)<-(nme:str)(val:any)
    b := Admin.lookup(nme);	# 1 CMDlookup (b:bat[str,str])<-(nme:str)
    h := algebra.select(b,val,val);	# 2 CMDselect (h:bat[str,str])<-(b:bat[str,str])(val:any)(val:any)
    t := algebra.count(h);	# 3 CMDcount_bat (t:int)<-(h:bat[str,str])
    x := io.print(t);	# 4 CMDprint_val (x:int)<-(t:int)
    y := io.print(val);	# 5 CMDprint_val (y:int)<-(val:any)
end sample;	# 6  
#sample("hello","world");
#sample("hello",1);
#
!ERROR: 'algebra.select' undefined in Admin.sample[2]
!ERROR: Error in cloned function
!ERROR: function Admin.sample(nme:str,val:int):int;	# 0  (val:int)<-(nme:str)(val:int)
    b := Admin.lookup(nme);	# 1 CMDlookup (b:bat[str,str])<-(nme:str)
    h := algebra.select(b,val,val);	# 2 CMDselect (h:bat[str,str])<-(b:bat[str,str])(val:int)(val:int)
    t := algebra.count(h);	# 3 CMDcount_bat (t:int)<-(h:bat[str,str])
    x := io.print(t);	# 4 CMDprint_val (x:int)<-(t:int)
    y := io.print(val);	# 5 CMDprint_val (y:int)<-(val:int)
end sample;	# 6  
!ERROR: 'Admin.sample' undefined in Admin.main[2]
function Admin.main():int;	# 0  (main:int)
    Admin.sample("hello","world");	# 1  ($1:bit)<-($2:str)($3:str)
    Admin.sample("hello",1);	# 2  ($4:bit)<-($2:str)($5:int)
end main;	# 3  
>